--- a/native/src/btn.css
+++ b/native/src/btn.css
@@ -1,13 +1,13 @@
 .btn {
   border-radius: 5px;
-  padding: 5px 15px;
+  padding: 10px 20px 8px;
   font-size: 1rem;
   text-decoration: none;
   text-align: center;
-  margin: 10px;
   color: #fff;
   position: relative;
   display: inline-block;
+  cursor: pointer;
 }
 
 .btn:active {
@@ -86,4 +86,13 @@
 
 .mint:hover {
   background-color: #59d1a1!important;
+}
+
+.grey {
+  background-color: #7f8c8d!important;
+  box-shadow: 0px 5px 0px 0px #636e70!important;
+}
+
+.grey:hover {
+  background-color: #95a5a6!important;
 }
