--- a/native/src/index.css
+++ b/native/src/index.css
@@ -4,18 +4,45 @@ body {
   position: absolute;
   font-family: "Goorm Sans", "MonoplexKR", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
   user-select: none;
+  display: flex;
 }
 
 h1 {
-  margin-bottom: 2rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 
-i.fw {
+h2 {
+  margin-top: 0;
+}
+
+div.container i.fw {
   margin-right: 0.5rem;
 }
 
 div.container {
-  margin-left: 6.5rem;
+  display: flex;
+  width: 100%;
+  padding: 1rem;
+}
+
+div.container div.configuration,
+div.container div.monitor {
+  padding: 1rem;
+}
+
+div.container div.configuration {
+  width: 400px;
+}
+
+div.container div.monitor {
+  flex-grow: 1;
+  text-align: center;
+}
+
+div.configuration div.mode-description {
+  margin-bottom: 2rem;
+  line-height: 1.5rem;
 }
 
 div.container article {
@@ -91,12 +118,9 @@ input::-webkit-inner-spin-button {
 * sidebar configurations
 *******************************************************************************/
 .sidebar-navigation {
-  display: inline-block;
-  position: fixed;
   min-height: 100vh;
   width: 5rem;
   background-color: #313443;
-  float: left;
   z-index: 99999;
 }
 
