add: $RESET protocol command

--- a/native/src/index.css
+++ b/native/src/index.css
@@ -144,6 +144,10 @@ input.sensor-id {
   font-weight: bold;
 }
 
+.reset {
+  margin-left: 1rem;
+}
+
 /*******************************************************************************
 * html default style patch
 *******************************************************************************/
