add: team selection ui

--- a/native/src/fonts.css
+++ b/native/src/fonts.css
@@ -1,4 +1,25 @@
 @font-face {
+  font-family: 'Goorm Sans';
+  src: url('../resources/fonts/goorm sans/goorm-sans-bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Goorm Sans';
+  src: url('../resources/fonts/goorm sans/goorm-sans-medium.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Goorm Sans';
+  src: url('../resources/fonts/goorm sans/goorm-sans-regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'MonoplexKR';
   src: url('../resources/fonts/MonoplexKR/MonoplexKR-Bold.woff2') format('woff2');
   font-weight: 700;
@@ -20,22 +41,8 @@
 }
 
 @font-face {
-  font-family: 'Goorm Sans';
-  src: url('../resources/fonts/goorm sans/goorm-sans-bold.woff2') format('woff2');
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Goorm Sans';
-  src: url('../resources/fonts/goorm sans/goorm-sans-medium.woff2') format('woff2');
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Goorm Sans';
-  src: url('../resources/fonts/goorm sans/goorm-sans-regular.woff2') format('woff2');
+  font-family: 'Departure Mono';
+  src: url('../resources/fonts/DepartureMono-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
 }
