fix: all the messes; but more left

--- a/native/src/styles.css
+++ b/native/src/styles.css
@@ -4,7 +4,11 @@ body {
   position: absolute;
   font-family: "Goorm Sans", "MonoplexKR", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
   user-select: none;
+}
+
+#root-container {
   display: flex;
+  margin-left: 80px;
 }
 
 h1 {
@@ -93,11 +97,12 @@ div.container .configuration article>div>div:last-child {
 /*******************************************************************************
 * specific DOM configurations
 *******************************************************************************/
-span#controller-id,
-span#controller-id i {
+span.controller-id,
+span.controller-id i {
   font-weight: normal;
   font-size: 1rem;
-  margin-left: 0.5rem;
+  margin-left: 0.2rem;
+  margin-right: 0.2rem!important;
 }
 
 .traffic {
@@ -302,6 +307,7 @@ input::-webkit-inner-spin-button {
 * sidebar configurations
 *******************************************************************************/
 .sidebar-navigation {
+  position: fixed;
   min-width: 80px;
   min-height: 100vh;
   background-color: #313443;
